prevent layout shift

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -347,6 +347,7 @@ p {
 
 img {
   max-width: 100%;
+  height: auto;
   border-radius: 10px;
   &.post-image {
     display: flex;
